<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFBFB"
    tools:context=".MainActivity">

    <View
        android:id="@+id/titleBackground"
        android:layout_width="0dp"
        android:layout_height="184dp"
        android:background="#3A5A57"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="122dp"
        android:layout_height="31dp"
        android:layout_marginStart="54dp"
        android:layout_marginLeft="54dp"
        android:layout_marginBottom="40dp"
        android:text="BT Tracker"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F9F8FA"
        app:layout_constraintBottom_toBottomOf="@+id/titleBackground"
        app:layout_constraintStart_toEndOf="@+id/titleImage" />

    <ImageView
        android:id="@+id/titleImage"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/titleBackground"
        app:layout_constraintStart_toStartOf="@+id/titleBackground"
        app:srcCompat="@android:drawable/btn_star" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="395dp"
        android:layout_height="277dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBackground"
        app:layout_constraintVertical_bias="0.050000012">

        <TextView
            android:id="@+id/MainButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#009688"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/log_body_temperature"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#F3EBEB" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/MainButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#009688"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/check_normal_range"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#F3EBEB" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/MainButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#009688"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/mechanism_of_fever"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#F3EBEB" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/MainButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#009688"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/handling_fever"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#F3EBEB" />
    </LinearLayout>

    <Button
        android:id="@+id/setReminderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="setReminder"
        android:text="@string/set_reminder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.14" />

</androidx.constraintlayout.widget.ConstraintLayout>